[gd_scene load_steps=14 format=2]

[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://pck/prefabs/AlertBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://pck/scripts/button.gd" type="Script" id=3]
[ext_resource path="res://pck/assets/menu/dragon_tiger.png" type="Texture" id=4]
[ext_resource path="res://pck/assets/common/panel-1.png" type="Texture" id=5]
[ext_resource path="res://pck/assets/menu/bg-4.jpg" type="Texture" id=6]
[ext_resource path="res://pck/assets/common/coin.png" type="Texture" id=7]
[ext_resource path="res://pck/assets/common/btn-exit.png" type="Texture" id=8]
[ext_resource path="res://pck/assets/menu/skm_bet.png" type="Texture" id=9]
[ext_resource path="res://pck/scenes/bet_game.gd" type="Script" id=10]
[ext_resource path="res://pck/assets/menu/horse.png" type="Texture" id=11]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, -10, 200, 210 )
margin_left = 60.0
margin_right = 60.0
margin_top = 80.0
margin_bottom = 60.0

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 1 )

[node name="root" type="Node2D"]
script = ExtResource( 10 )
__meta__ = {
"_edit_horizontal_guides_": [ 200.0 ],
"_edit_vertical_guides_": [ 1000.0 ]
}

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 1000, 450 )
texture = ExtResource( 6 )

[node name="Balance" type="Panel" parent="."]
margin_left = 1560.0
margin_top = 60.0
margin_right = 1820.0
margin_bottom = 140.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Balance"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 10.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Coin" type="Sprite" parent="Balance"]
position = Vector2( 31, 44 )
texture = ExtResource( 7 )

[node name="AlertBox" parent="." instance=ExtResource( 2 )]
position = Vector2( 1000, 980 )
targetY = 840.0

[node name="Exit" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 120.0
texture_normal = ExtResource( 8 )
script = ExtResource( 3 )

[node name="SKM" type="TextureButton" parent="."]
margin_left = 360.0
margin_top = 200.0
margin_right = 740.0
margin_bottom = 900.0
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 3
script = ExtResource( 3 )

[node name="HorseRacing" type="TextureButton" parent="."]
margin_left = 800.0
margin_top = 200.0
margin_right = 1200.0
margin_bottom = 900.0
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 3
script = ExtResource( 3 )

[node name="TigerDragon" type="TextureButton" parent="."]
margin_left = 1260.0
margin_top = 200.0
margin_right = 1620.0
margin_bottom = 900.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3
script = ExtResource( 3 )

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="SKM" to="." method="_on_SKM_pressed"]
[connection signal="pressed" from="HorseRacing" to="." method="_on_HorseRacing_pressed"]
[connection signal="pressed" from="TigerDragon" to="." method="_on_TigerDragon_pressed"]
